--- a/ldv/shopping/templates/shopping/base.html
+++ b/ldv/shopping/templates/shopping/base.html
@@ -6,6 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
+    <div class="hero-head">
+
+        <nav class="navbar">
+                {% if user.is_authenticated %}
+                    <div class="navbar-item">
+                    <a href="{% url 'logout' %}" class="button is-warning">Logout</a>
+                    </div>
+                    <div class="navbar-item">
+                    <a href="{% url 'basket' %}" class="button is-success">Basket</a>
+                    </div>
+                    <div class="navbar-item">
+                    <a href="{% url 'shop' %}" class="button is-info">Shop</a>
+                    </div>
+                    {% else %}
+                    <div class="navbar-item">
+                    <a href="{% url 'login' %}" class="button is-warning">Login</a>
+                    </div>
+                {% endif %}
+        </nav>
+    </div>
     {% block content %}{% endblock %}
 </body>
 </html>
