--- a/ldv/shopping/templates/shopping/basket.html
+++ b/ldv/shopping/templates/shopping/basket.html
@@ -7,9 +7,9 @@
 <div class="columns is-multiline">
   {% for item in items %}
   <div class="column is-one-fifth">
-    <h1 class="title is-1">{{ item.vetement.name }}</h1>
-    <p class="subtitle is-3">{{ item.vetement.description }}</p>
-    <input type="text" class="input" value="{{ item.vetement.price }}" disabled />
+    <h1 class="title is-1">{{ item.clothe.name }}</h1>
+    <p class="subtitle is-3">{{ item.clothe.description }}</p>
+    <input type="text" class="input" value="{{ item.clothe.price }}" disabled />
   </div>
   {% endfor %}
 </div>
