--- a/ldv/shopping/templates/shopping/basket.html
+++ b/ldv/shopping/templates/shopping/basket.html
@@ -5,12 +5,17 @@
 {% block content %}
 <p class="content">Your basket is :</p>
 <div class="columns is-multiline">
-  {% for item in items %}
-  <div class="column is-one-fifth">
-    <h1 class="title is-1">{{ item.clothe.name }}</h1>
-    <p class="subtitle is-3">{{ item.clothe.description }}</p>
-    <input type="text" class="input" value="{{ item.clothe.price }}" disabled />
-  </div>
-  {% endfor %}
+<form class="" action="basket" method="post">
+        {% csrf_token %}
+        {% for item in items %}
+        <div class="column is-one-fifth">
+            <h1 class="title is-1">{{ item.clothe.name }}</h1>
+            <p class="subtitle is-3">{{ item.clothe.description }}</p>
+            <input type="text" class="input" value="{{ item.clothe.price }}" disabled />
+            <input type="checkbox" name="{{ item.id }}">
+        </div>
+        {% endfor %}
+    <input type="submit">
+</form>
 </div>
 {% endblock %}
